tests/vertical-slice/accept/generic_aggregate_eq.hew
type Pair<A, B> {
    first: A;
    second: B;
}

type Identity {
    id: i64;
    name: string;
}

type Slot<T> {
    value: T;
}

type Bag<T> {
    items: Vec<T>;
}

fn pair_same<A, B>(a: Pair<A, B>, b: Pair<A, B>) -> bool {
    a == b
}

fn slot_same<T>(a: Slot<T>, b: Slot<T>) -> bool {
    a == b
}

fn bag_same<T>(a: Bag<T>, b: Bag<T>) -> bool {
    a == b
}

fn vec_one_two() -> Vec<i64> {
    let values: Vec<i64> = Vec::new();
    values.push(1);
    values.push(2);
    values
}

fn vec_one_three() -> Vec<i64> {
    let values: Vec<i64> = Vec::new();
    values.push(1);
    values.push(3);
    values
}

fn main() {
    let pair_eq = pair_same(Pair { first: 7, second: "hew" }, Pair { first: 7, second: "hew" });
    let pair_ne = pair_same(Pair { first: 7, second: "hew" }, Pair { first: 8, second: "hew" });
    let record_eq = slot_same(Slot { value: Identity { id: 1, name: "ada" } }, Slot { value: Identity { id: 1, name: "ada" } });
    let record_ne = slot_same(Slot { value: Identity { id: 1, name: "ada" } }, Slot { value: Identity { id: 2, name: "ada" } });
    let bag_eq = bag_same(Bag { items: vec_one_two() }, Bag { items: vec_one_two() });
    let bag_ne = bag_same(Bag { items: vec_one_two() }, Bag { items: vec_one_three() });
    println(f"pair={pair_eq} pair-ne={pair_ne} record={record_eq} record-ne={record_ne} bag={bag_eq} bag-ne={bag_ne}");
}
