tests/vertical-slice/reject/generic_aggregate_eq_unknown.hew
type Pair<A, B> {
    first: A;
    second: B;
}

type Bag<T> {
    items: Vec<T>;
}

fn pair_same<A, B>(a: Pair<A, B>, b: Pair<A, B>) -> bool {
    a == b
}

fn bag_same<T>(a: Bag<T>, b: Bag<T>) -> bool {
    a == b
}
